[project]
name = "synthoseis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bruges>=0.5.4",
    "commentjson",
    "matplotlib",
    "numba",
    "numpy>=2.0",
    "opensimplex>=0.4.5.1",
    "plotly",
    "psutil>=7.2.2",
    "ruff>=0.10.0",
    "scikit-image",
    "scipy",
    "setuptools>=76.0.0",
    "tqdm",
    "xarray",
    "zarr>=3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
