[project]
name = "synthoseis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bruges>=0.5.4",
    "commentjson",
    "matplotlib",
    "numba",
    "numpy>=2.0",
    "opensimplex>=0.4.5.1",
    "plotly",
    "psutil>=7.2.2",
    "ruff>=0.10.0",
    "scikit-image",
    "scipy",
    "setuptools>=76.0.0",
    "tqdm",
    "xarray",
    "zarr>=3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.5",
    "anyio>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow end-to-end integration tests (deselect with '-m not slow')",
]
